--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark ">
             <div class="container">
                 <a class="navbar-brand" href="#">
-                    <img src="/assets/img/logotipo/PXOAcademy-logotipo-blanco.png" width="110" height="60" alt="">
+                    <img src="assets/img/logotipo/PXOAcademy-logotipo-blanco.png" width="110" height="60" alt="">
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -89,7 +89,7 @@
                                 class="fa-solid fa-arrow-right"></i></a>
                     </div>
                     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6">
-                        <img src="/assets/img/secciones/img-home.png" class="img-fluid img-m" alt="" srcset="">
+                        <img src="assets/img/secciones/img-home.png" class="img-fluid img-m" alt="" srcset="">
                     </div>
                 </div>
            
@@ -230,42 +230,49 @@
     <section class="comunidad">
         <div class="container comunidad">
             <div class="row align-self-center align-items-center justify-content-center">
-                <div class="col-xs-12 col-sm-12 col-md-4 col-lg-3">
+                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-3 d-none d-lg-block d-xl-block ">
                     <p id="title-comunidad">Únete a la comunidad</p>
                     <p id="txt-description-comunidad">Mantente enterado de las ultimas actualizaciones</p>
                 </div>
+
+                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-3 d-block d-sm-none d-sm-block d-md-block d-lg-none
+                text-center">
+                    <p id="title-comunidad-2">Únete a la comunidad</p>
+                    <p id="txt-description-comunidad">Mantente enterado de las ultimas actualizaciones</p>
+                </div>
+
                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6">
                     <div class="row row-cols-md-3 row-cols-sm-2">
                         <div class="col-4 nombred">
-                            <div class="skill"><img src="/assets/img/comunidad/medium.png" class="img-fluid" alt=""
+                            <div class="skill"><img src="assets/img/comunidad/medium.png" class="img-fluid" alt=""
                                     srcset=""></i></div>
                             <span class="nombred">Medium</span>
                         </div>
                         <div class="col-4 nombred">
-                            <div class="skill"><img src="/assets/img/comunidad/facebook.png" class="img-fluid" alt=""
+                            <div class="skill"><img src="assets/img/comunidad/facebook.png" class="img-fluid" alt=""
                                     srcset=""></i></div>
                             <span class="nombred">Facebook</span>
                         </div>
                         <div class="col-4 nombred">
-                            <div class="skill"><img src="/assets/img/comunidad/instagram.png" class="img-fluid" alt=""
+                            <div class="skill"><img src="assets/img/comunidad/instagram.png" class="img-fluid" alt=""
                                     srcset=""></i></div>
                             <span class="nombred">Instagram</span>
 
                         </div>
                         <div class="col-4 nombred">
-                            <div class="skill"><img src="/assets/img/comunidad/youtube.png" class="img-fluid" alt=""
+                            <div class="skill"><img src="assets/img/comunidad/youtube.png" class="img-fluid" alt=""
                                     srcset=""></i></div>
                             <span class="nombred">Youtube</span>
 
                         </div>
                         <div class="col-4 nombred">
-                            <div class="skill"><img src="/assets/img/comunidad/linkedin.png" class="img-fluid" alt=""
+                            <div class="skill"><img src="assets/img/comunidad/linkedin.png" class="img-fluid" alt=""
                                     srcset=""></i></div>
                             <span class="nombred">Linkedin </span>
 
                         </div>
                         <div class="col-4 nombred">
-                            <div class="skill"><img src="/assets/img/comunidad/telegram.png" class="img-fluid" alt=""
+                            <div class="skill"><img src="assets/img/comunidad/telegram.png" class="img-fluid" alt=""
                                     srcset=""></i></div>
                             <span class="nombred">Telegram</span>
                         </div>
@@ -283,29 +290,29 @@
                 <div class="col-xs-12 col-sm-12 col-md-10 col-lg-10">
                     <div class="row row-cols-md-1 row-cols-sm-1">
                         <div class="col-lg-4 col-md-4 col-sm-6 nombred">
-                            <div class="skill"><img src="/assets/img/menciones/cointelgraph.png" class="img-fluid"
+                            <div class="skill"><img src="assets/img/menciones/cointelgraph.png" class="img-fluid"
                                     alt="" srcset=""></i></div>
                         </div>
                         <div class="col-lg-4 col-md-4 col-sm-6 nombred">
-                            <div class="skill"><img src="/assets/img/menciones/eleconomista.png" class="img-fluid"
+                            <div class="skill"><img src="assets/img/menciones/eleconomista.png" class="img-fluid"
                                     alt="" srcset=""></i></div>
                         </div>
                         <div class="col-lg-4 col-md-4 col-sm-6 nombred">
-                            <div class="skill"><img src="/assets/img/menciones/techla.png" class="img-fluid" alt=""
+                            <div class="skill"><img src="assets/img/menciones/techla.png" class="img-fluid" alt=""
                                     srcset=""></i></div>
                         </div>
                         <div class="col-lg-4 col-md-4 col-sm-6 nombred">
-                            <div class="skill"><img src="/assets/img/menciones/diafintech.png" class="img-fluid" alt=""
+                            <div class="skill"><img src="assets/img/menciones/diafintech.png" class="img-fluid" alt=""
                                     srcset=""></i></div>
 
                         </div>
                         <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6 nombred">
-                            <div class="skill"><img src="/assets/img/menciones/elceo.png" class="img-fluid" alt=""
+                            <div class="skill"><img src="assets/img/menciones/elceo.png" class="img-fluid" alt=""
                                     srcset=""></i></div>
 
                         </div>
                         <div class="col-lg-4 col-md-4 col-sm-6 nombred">
-                            <div class="skill"><img src="/assets/img/menciones/decrypt.png" class="img-fluid" alt=""
+                            <div class="skill"><img src="assets/img/menciones/decrypt.png" class="img-fluid" alt=""
                                     srcset=""></i></div>
                         </div>
                     </div>
@@ -321,7 +328,7 @@ background: linear-gradient(0deg, rgba(14,113,128,1) 0%, rgba(34,41,90,1) 53%, r
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-2 col-md-6 col-sm-6 col-xs-6">
-                <img src="/assets/img/logotipo/PXOAcademy-logotipo-blanco.png" class="img-fluid" alt="" srcset="">
+                <img src="assets/img/logotipo/PXOAcademy-logotipo-blanco.png" class="img-fluid" alt="" srcset="">
             </div>
 
             <div class="col-lg-6 col-md-12 col-sm-12 offset-md-0 offset-lg-2 offset-sm-0">
