--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 <body>
     <section class="fondo-principal">
         <nav class="navbar navbar-expand-lg navbar-dark ">
-            <div class="container">
-                <a class="navbar-brand" href="#">
+            <div class="container" style="padding: 0px 0px 0px 15px;">
+                <a class="navbar-brand" href="index.html">
                     <img src="assets/img/logotipo/PXOAcademy-logotipo-blanco.png" width="110" height="60" alt="">
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -53,8 +53,8 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
-                        <li class="nav-item active">
-                            <a class="nav-link" href="#">Articulos <span class="sr-only">(current)</span></a>
+                        <li class="nav-item">
+                            <a class="nav-link" href="articulos.html">Articulos <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">StableTalks</a>
@@ -94,9 +94,6 @@
                 </div>
            
             </div>
-       
-
-
         </section>
     </section>
     <section id="cards">
