--- a/articulos.html
+++ b/articulos.html
@@ -81,7 +81,7 @@
 
 
 
-    <section class="carousel-articulos">
+    <section class="carousel-articulos  d-none d-lg-block d-xl-block">
         <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
             <ol class="carousel-indicators">
                 <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -111,21 +111,52 @@
     </section>
 
 
+    <section class="d-block d-sm-none d-sm-block d-md-block d-lg-none">
+        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img class="d-block w-100 " src="https://placeimg.com/1920/1080/any" alt="First slide">
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100" src="https://placeimg.com/1920/1080/any" alt="Second slide">
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100" src="https://placeimg.com/1920/1080/any" alt="Third slide">
+                </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
+    </section>
+        
+
+
 
 
 
     <section class="filtros">
         <div class="container">
             <div class="row justify-content-between">
-                <div class="col-auto ">
+                <div class="col-xs-6">
                     <p class="title-general">Filtros</p>
                 </div>
-                <div class="col-auto">
+                <div class="col-xs-6">
                     <a href="http://laweb.com" target="_blank" class="boton-blanco">Aplicar filtros</a>
                 </div>
             </div>
-            <div class="row justify-content-center">
-                <div class="col-auto bt-col">
+            <div class="row justify-content-center ">
+                <div class="col-auto col-xs-12 col-sm-12 bt-col">
                     <a href="http://laweb.com" target="_blank" class="boton-filtro">Aplicar filtros<i
                             class="fa-solid fa-circle-plus"></i></a>
                 </div>
