--- a/contacto.html
+++ b/contacto.html
@@ -54,16 +54,16 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#">Articulos <span class="sr-only">(current)</span></a>
+                    <li class="nav-item ">
+                        <a class="nav-link" href="articulos.html">Articulos <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">StableTalks</a>
+                        <a class="nav-link" href="stprogramado.html">StableTalks</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">PXOPedia</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item active">
                         <a class="nav-link" href="#">Contacto</a>
                     </li>
                 </ul>
