--- a/index.html
+++ b/index.html
@@ -57,13 +57,13 @@
                             <a class="nav-link" href="articulos.html">Articulos <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">StableTalks</a>
+                            <a class="nav-link" href="stprogramado.html">StableTalks</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">PXOPedia</a>
+                            <a class="nav-link" href="#pxopedia.html">PXOPedia</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Contacto</a>
+                            <a class="nav-link" href="contacto.html">Contacto</a>
                         </li>
                     </ul>
                 </div>
