--- a/articulos-interior.html
+++ b/articulos-interior.html
@@ -40,51 +40,51 @@
 </head>
 
 
+
 <body>
+    <div class="content-extended" style="padding: 0px 20px 0px 20px;">
+
     <nav class="navbar navbar-expand-lg navbar-dark" style="
         text-decoration: underline;
         border-bottom: .7px solid #11111129;">
-        <div class="container" style="padding: 0px 0px 0px 15px;">
-            <a class="navbar-brand" href="index.html">
-                <img src="assets/img/logotipo/PXOAcademy-logotipo-azul.png" width="110" height="60" alt="">
-            </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#">Articulos <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">StableTalks</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">PXOPedia</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Contacto</a>
-                    </li>
-                </ul>
-            </div>
-            <form class="form-inline   d-none d-lg-block d-xl-block">
-                <div id="is-relative">
-                    <input type="search" class="input" placeholder="Buscar">
-                    <span id="icon">
-                        <i class="fa-solid fa-magnifying-glass"></i>
-                    </span>
+            <div class="container-fluid" >
+                <a class="navbar-brand" href="index.html">
+                    <img src="assets/img/logotipo/PXOAcademy-logotipo-azul.png" width="110" height="60" alt="">
+                </a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="articulos.html">Articulos <span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item  ">
+                            <a class="nav-link" href="stprogramado.html">StableTalks</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="">PXOPedia</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="contacto.html">Contacto</a>
+                        </li>
+                    </ul>
                 </div>
-            </form>
-        </div>
-    </nav>
-
-
-
+                <form class="form-inline   d-none d-lg-block d-xl-block">
+                    <div id="is-relative">
+                        <input type="search" class="input" placeholder="Buscar">
+                        <span id="icon">
+                            <i class="fa-solid fa-magnifying-glass"></i>
+                        </span>
+                    </div>
+                </form>
+            </div>
+        </nav>
     <section class="carousel-articulos">
         <div class="breadcrumbles">
             <div class="container">
-                <div class="row">
+                <div class="row justify-content-between" >
                     <div class="centerbread">
                         <a href="articulos.html" target="_blank" class="return">
                             <i class="fa-solid fa-arrow-left"></i>
@@ -95,17 +95,20 @@
                 </div>
             </div>
         </div>
-        <img class="d-block w-100 " src="https://placeimg.com/1920/1080/any" alt="First slide">
-        <div class="row">
-            <div class="col-6">
-                <p class="title-interna">Lorem ipsum dolor sit amet, consectetur adipiscing elit, </p>
+        <img class="d-block img-fluid" src="https://placeimg.com/1920/920/any" alt="First slide" style="padding: 10px 20px 10px 20px;" >
+        <div style="padding: 10px 20px 10px 20px;">
+            <div class="row justify-content-between">
+                <div class="col-lg-6 col-sm-12">
+                    <p class="title-interna">Lorem ipsum dolor sit amet, consectetur adipiscing elit, </p>
+                </div>
+                <div class="col-md-3 col-lg-3 col-xs-1">
+                    <p class="card-text"><small class="text-muted"><i class="fa-regular fa-clock i-clock"></i>3 mins
+                        ago</small></p>
+                </div>
             </div>
-            <div class="col">
-                <p class="card-text-2"><small class="text-muted"><i class="fa-regular fa-clock i-clock"></i>3
-                        mins</small></p>
-            </div>
+            <p class="card-text-l"><small class="text-muted"><i class="fa-regular fa-clock i-clock"></i>8,may.</small></p>
         </div>
-        <p class="card-text-l"><small class="text-muted">8 may 2021</small></p>
+       
     </section>
 
 
@@ -230,7 +233,7 @@
 
         </div>
     </section>
-
+    </div>
 
 
 
