--- a/articulos.html
+++ b/articulos.html
@@ -41,48 +41,51 @@
 
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark" style="
+
+    <div class="content-extended" style="padding: 0px 20px 0px 20px;">
+        
+        <nav class="navbar navbar-expand-lg navbar-dark" style="
         text-decoration: underline;
         border-bottom: .7px solid #11111129;">
-        <div class="container" style="padding: 0px 0px 0px 15px;">
-            <a class="navbar-brand" href="index.html">
-                <img src="assets/img/logotipo/PXOAcademy-logotipo-azul.png" width="110" height="60" alt="">
-            </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#">Articulos <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">StableTalks</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">PXOPedia</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Contacto</a>
-                    </li>
-                </ul>
-            </div>
-            <form class="form-inline   d-none d-lg-block d-xl-block">
-                <div id="is-relative">
-                    <input type="search" class="input" placeholder="Buscar">
-                    <span id="icon">
-                        <i class="fa-solid fa-magnifying-glass"></i>
-                    </span>
+            <div class="container-fluid" >
+                <a class="navbar-brand" href="index.html">
+                    <img src="assets/img/logotipo/PXOAcademy-logotipo-azul.png" width="110" height="60" alt="">
+                </a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" href="articulos.html">Articulos <span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item  active">
+                            <a class="nav-link" href="#">StableTalks</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="">PXOPedia</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Contacto</a>
+                        </li>
+                    </ul>
                 </div>
-            </form>
-        </div>
-    </nav>
+                <form class="form-inline   d-none d-lg-block d-xl-block">
+                    <div id="is-relative">
+                        <input type="search" class="input" placeholder="Buscar">
+                        <span id="icon">
+                            <i class="fa-solid fa-magnifying-glass"></i>
+                        </span>
+                    </div>
+                </form>
+            </div>
+        </nav>
 
 
 
     <section class="carousel-articulos  d-none d-lg-block d-xl-block">
-        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" >
             <ol class="carousel-indicators">
                 <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
                 <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
@@ -90,13 +93,13 @@
             </ol>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img class="d-block w-100 " src="https://placeimg.com/1920/1080/any" alt="First slide">
+                    <img class="d-block img-fluid" src="https://placeimg.com/1920/920/any" alt="First slide" style="padding: 10px 20px 10px 20px;" >
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="https://placeimg.com/1920/1080/any" alt="Second slide">
+                    <img class="d-block img-fluid" src="https://placeimg.com/1920/920/any" alt="First slide" style="padding: 10px 20px 10px 20px;" >
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="https://placeimg.com/1920/1080/any" alt="Third slide">
+                    <img class="d-block img-fluid" src="https://placeimg.com/1920/920/any" alt="First slide" style="padding: 10px 20px 10px 20px;" >
                 </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -156,7 +159,7 @@
                 </div>
             </div>
             <div class="row justify-content-center ">
-                <div class="col-auto col-xs-12 col-sm-12 bt-col">
+                <div class="col-auto bt-col">
                     <a href="http://laweb.com" target="_blank" class="boton-filtro">Aplicar filtros<i
                             class="fa-solid fa-circle-plus"></i></a>
                 </div>
@@ -334,6 +337,7 @@
 
 
 
+</div>
 
 
 
