--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark ">
             <div class="container" style="padding: 0px 0px 0px 15px;">
                 <a class="navbar-brand" href="index.html">
-                    <img src="assets/img/logotipo/PXOAcademy-logotipo-blanco.png" width="110" height="60" alt="">
+                    <img src="assets/img/logotipo/PXOAcademy-logotipo-azul.png" width="130" height="70" alt="">
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -57,7 +57,7 @@
                             <a class="nav-link" href="articulos.html">Articulos <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="stprogramado.html">StableTalks</a>
+                            <a class="nav-link" href="stgeneral.html">StableTalks</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#pxopedia.html">PXOPedia</a>
@@ -88,7 +88,7 @@
                         <a href="http://laweb.com" target="_blank" class="boton">Aprender más <i
                                 class="fa-solid fa-arrow-right"></i></a>
                     </div>
-                    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6">
+                    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6 img-pri">
                         <img src="assets/img/secciones/img-home.png" class="img-fluid img-m" alt="" srcset="">
                     </div>
                 </div>
