--- a/articulos.html
+++ b/articulos.html
@@ -44,10 +44,8 @@
 
     <div class="content-extended" style="padding: 0px 20px 0px 20px;">
         
-        <nav class="navbar navbar-expand-lg navbar-dark" style="
-        text-decoration: underline;
-        border-bottom: .7px solid #11111129;">
-            <div class="container-fluid" >
+        <nav class="navbar navbar-expand-lg navbar-dark ">
+            <div class="container" style="padding: 0px 0px 0px 15px;">
                 <a class="navbar-brand" href="index.html">
                     <img src="assets/img/logotipo/PXOAcademy-logotipo-azul.png" width="110" height="60" alt="">
                 </a>
@@ -58,16 +56,17 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="articulos.html">Articulos <span class="sr-only">(current)</span></a>
-                        </li>
-                        <li class="nav-item  active">
-                            <a class="nav-link" href="#">StableTalks</a>
+                            <a class="nav-link active" href="articulos.html">Articulos <span
+                                    class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="">PXOPedia</a>
+                            <a class="nav-link" href="stgeneral.html">StableTalks</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Contacto</a>
+                            <a class="nav-link" href="poxopedia.html">PXOPedia</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="contacto.html">Contacto</a>
                         </li>
                     </ul>
                 </div>
@@ -80,41 +79,12 @@
                     </div>
                 </form>
             </div>
-        </nav>
+        </nav>                                                                            
 
 
 
-    <section class="carousel-articulos  d-none d-lg-block d-xl-block">
-        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" >
-            <ol class="carousel-indicators">
-                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-            </ol>
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img class="d-block img-fluid" src="https://placeimg.com/1920/920/any" alt="First slide" style="padding: 10px 20px 10px 20px;" >
-                </div>
-                <div class="carousel-item">
-                    <img class="d-block img-fluid" src="https://placeimg.com/1920/920/any" alt="First slide" style="padding: 10px 20px 10px 20px;" >
-                </div>
-                <div class="carousel-item">
-                    <img class="d-block img-fluid" src="https://placeimg.com/1920/920/any" alt="First slide" style="padding: 10px 20px 10px 20px;" >
-                </div>
-            </div>
-            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-            </a>
-        </div>
-    </section>
 
-
-    <section class="d-block d-sm-none d-sm-block d-md-block d-lg-none">
+    <section class="d-block ">
         <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
             <ol class="carousel-indicators">
                 <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -123,13 +93,13 @@
             </ol>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img class="d-block w-100 " src="https://placeimg.com/1920/1080/any" alt="First slide">
+                    <div class="caja-img" style="background-image: url(assets/img/placeholder.webp);"></div>
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="https://placeimg.com/1920/1080/any" alt="Second slide">
+                    <div class="caja-img" style="background-image: url(assets/img/placeholder.webp);"></div>
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="https://placeimg.com/1920/1080/any" alt="Third slide">
+                    <div class="caja-img" style="background-image: url(assets/img/placeholder.webp);"></div>
                 </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -271,8 +241,7 @@
                                         additional content. This content is a little bit longer.</p>
                                     <div class="container">
                                         <div class="row justify-content-between">
-                                            <p class="card-text-l"><small class="text-muted"><i
-                                                        class="fa-regular fa-clock i-clock"></i>8, may.</small></p>
+                                            <p class="card-text-l"><small class="text-muted">8, may.</small></p>
                                             <p class="card-text"><small class="text-muted"><i
                                                         class="fa-regular fa-clock i-clock"></i>3 mins ago</small></p>
                                         </div>
@@ -294,8 +263,7 @@
                                         additional content. This content is a little bit longer.</p>
                                     <div class="container">
                                         <div class="row justify-content-between">
-                                            <p class="card-text-l"><small class="text-muted"><i
-                                                        class="fa-regular fa-clock i-clock"></i>8, may.</small></p>
+                                            <p class="card-text-l"><small class="text-muted">8, may.</small></p>
                                             <p class="card-text"><small class="text-muted"><i
                                                         class="fa-regular fa-clock i-clock"></i>3 mins ago</small></p>
                                         </div>
@@ -317,8 +285,7 @@
                                         additional content. This content is a little bit longer.</p>
                                     <div class="container">
                                         <div class="row justify-content-between">
-                                            <p class="card-text-l"><small class="text-muted"><i
-                                                        class="fa-regular fa-clock i-clock"></i>8, may.</small></p>
+                                            <p class="card-text-l"><small class="text-muted">8, may.</small></p>
                                             <p class="card-text"><small class="text-muted"><i
                                                         class="fa-regular fa-clock i-clock"></i>3 mins ago</small></p>
                                         </div>
