--- a/contacto.html
+++ b/contacto.html
@@ -41,12 +41,10 @@
 
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark" style="
-    text-decoration: underline;
-    border-bottom: .7px solid #11111129;">
+    <nav class="navbar navbar-expand-lg navbar-dark ">
         <div class="container" style="padding: 0px 0px 0px 15px;">
             <a class="navbar-brand" href="index.html">
-                <img src="assets/img/logotipo/PXOAcademy-logotipo-azul.png" width="110" height="60" alt="">
+                <img src="assets/img/logotipo/PXOAcademy-logotipo-azul.png" width="130" height="70" alt="">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -54,17 +52,18 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
-                    <li class="nav-item ">
-                        <a class="nav-link" href="articulos.html">Articulos <span class="sr-only">(current)</span></a>
+                    <li class="nav-item">
+                        <a class="nav-link " href="articulos.html">Articulos <span
+                                class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="stprogramado.html">StableTalks</a>
+                        <a class="nav-link" href="stgeneral.html">StableTalks</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">PXOPedia</a>
+                        <a class="nav-link" href="poxopedia.html">PXOPedia</a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link" href="#">Contacto</a>
+                        <a class="nav-link" href="contacto.html">Contacto</a>
                     </li>
                 </ul>
             </div>
@@ -77,7 +76,7 @@
                 </div>
             </form>
         </div>
-    </nav>
+    </nav>     
 
 
     <section class="fondo-principal">
