--- a/poxopedia.html
+++ b/poxopedia.html
@@ -42,10 +42,10 @@
 
 
 <body>
-    <div class="content-extended" style="padding: 0px 20px 0px 20px;">
+    <div class="content-extended" style="padding: 0px 0px 0px 0px;">
 
 
-        <nav class="navbar navbar-expand-lg navbar-dark ">
+        <nav class="navbar navbar-expand-lg navbar-dark " style="border-bottom:.2px solid rgba(188, 188, 188, 0.279) ;">
             <div class="container" style="padding: 0px 0px 0px 15px;">
                 <a class="navbar-brand" href="index.html">
                     <img src="assets/img/logotipo/PXOAcademy-logotipo-azul.png" width="130" height="70" alt="">
@@ -88,7 +88,7 @@
         <section id="banner">
             <div class="container">
                 <div class="row">
-                    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6  d-flex 
+                    <div class="col-xs-10 col-sm-10 col-md-12 col-lg-6  d-flex 
                     flex-column 
                     justify-content-center ">
                         <h1 id="txt-titulo">PXOPedia</h1>
@@ -105,7 +105,7 @@
 
 
 
-    <div class="center marg-p " style="margin-top:10px">
+    <div class="center marg-p " style="margin-top:20px">
         <ul class="pagination">
             <li><a class="active" href="#">#</a></li>
             <li><a href="#">A</a></li>
@@ -137,7 +137,7 @@
 
 
 
-    <div class="center">
+    <div class="center" style="margin:10px;">
         <section class="letter-#" id="">
             <div class="line center"></div>
             <div class="container">
