--- a/articulos-interior.html
+++ b/articulos-interior.html
@@ -42,9 +42,9 @@
 
 
 <body>
-    <div class="content-extended" style="padding: 0px 20px 0px 20px;">
+    <div class="content-extended" style="padding: 0px 10px 0px 10px;">
 
-        <nav class="navbar navbar-expand-lg navbar-dark ">
+        <nav class="navbar navbar-expand-lg navbar-dark " style="border-bottom:.7px solid rgba(188, 188, 188, 0.552) ;">
             <div class="container" style="padding: 0px 0px 0px 15px;">
                 <a class="navbar-brand" href="index.html">
                     <img src="assets/img/logotipo/PXOAcademy-logotipo-azul.png" width="130" height="70" alt="">
@@ -80,7 +80,7 @@
                 </form>
             </div>
         </nav>
-        <section class="carousel-articulos">
+        <section class="carousel-articulos" style="margin-top: 15px;">
             <div class="breadcrumbles">
                 <div class="container-fluid">
                     <div class="row justify-content-between">
@@ -92,13 +92,26 @@
                                     impsun interno</span></p>
                         </div>
                     </div>
-                    <div class="row">
-                        <div class="col-12">
-                            <div class="caja-img">
+                        
+
+
+
+                        <div class="row">
+                            <div class="col-12">
+                                <div class="caja-img">
+                                     <img class="d-block w-100" src="assets/img/placeholder.webp" style="background-position: center; /* Center the image */
+                                            background-repeat: no-repeat; /* Do not repeat the image */
+                                            background-size: cover;
+                                            height: 100%;" alt="First slide">
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="row justify-content-between" style="margin-top: 15px;">
+
+
+
+
+
+                    <div class="row justify-content-between" style="margin-top: 15px; ">
                         <div class="col-lg-5 col-md-7 col-sm-12">
                             <p class="title-interna">Lorem ipsum dolor sit amet, consectetur elit, expert saas </p>
                         </div>
@@ -107,7 +120,7 @@
                                     mins
                                     ago</small></p>
                         </div>
-                        <div class="col-lg-2  col-md-2 col-sm-6">
+                        <div class="col-lg-2  col-md-2 col-sm-4">
                             <p class="card-text-l"><small class="text-muted"><i
                                         class="fa-regular fa-clock i-clock"></i>8,may.</small></p>
                         </div>
@@ -142,8 +155,7 @@
                         </div>
                     </div>
 
-                    <div class="row justify-content-between" style="  margin-top: 30px;
-                    border-top: .9px solid #D4D4D650;">
+                    <div class="row justify-content-between" style="padding-right:12px; padding-left: 12px; border-top:.7px solid rgba(188, 188, 188, 0.279) ;" ;>
                         <div class="col-auto ">
                             <p class="title-general">Quizas te interese</p>
                         </div>
@@ -165,9 +177,8 @@
                                                 additional content. This content is a little bit longer.</p>
                                             <div class="container">
                                                 <div class="row justify-content-between">
-                                                    <p class="card-text-l"><small class="text-muted"><i
-                                                                class="fa-regular fa-clock i-clock"></i>8, may.</small>
-                                                    </p>
+                                                    <p class="card-text-l"><small class="text-muted"></i>8, may.</small>
+
                                                     <p class="card-text"><small class="text-muted"><i
                                                                 class="fa-regular fa-clock i-clock"></i>3 mins
                                                             ago</small></p>
@@ -191,8 +202,7 @@
                                                 additional content. This content is a little bit longer.</p>
                                             <div class="container">
                                                 <div class="row justify-content-between">
-                                                    <p class="card-text-l"><small class="text-muted"><i
-                                                                class="fa-regular fa-clock i-clock"></i>8, may.</small>
+                                                    <p class="card-text-l"><small class="text-muted"></i>8, may.</small>
                                                     </p>
                                                     <p class="card-text"><small class="text-muted"><i
                                                                 class="fa-regular fa-clock i-clock"></i>3 mins
