--- a/contacto.html
+++ b/contacto.html
@@ -41,7 +41,7 @@
 
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark ">
+    <nav class="navbar navbar-expand-lg navbar-dark " style="border-bottom:.2px solid rgba(188, 188, 188, 0.279) ;">
         <div class="container" style="padding: 0px 0px 0px 15px;">
             <a class="navbar-brand" href="index.html">
                 <img src="assets/img/logotipo/PXOAcademy-logotipo-azul.png" width="130" height="70" alt="">
