--- a/articulos-interior.html
+++ b/articulos-interior.html
@@ -44,10 +44,10 @@
 <body>
     <div class="content-extended" style="padding: 0px 10px 0px 10px;">
 
-        <nav class="navbar navbar-expand-lg navbar-dark " style="border-bottom:.7px solid rgba(188, 188, 188, 0.552) ;">
+        <nav class="navbar navbar-expand-lg navbar-dark " style="border-bottom:1px solid rgba(188, 188, 188, 0.552);">
             <div class="container" style="padding: 0px 0px 0px 15px;">
                 <a class="navbar-brand" href="index.html">
-                    <img src="assets/img/logotipo/PXOAcademy-logotipo-azul.png" width="130" height="70" alt="">
+                    <img src="assets/img/logotipo/PXOAcademy-logotipo-azul.png" width="115" height="70" alt="">
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -60,7 +60,7 @@
                                     class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="stprogramado.html">StableTalks</a>
+                            <a class="nav-link active" href="stgeneral.html">StableTalks</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="poxopedia.html">PXOPedia</a>
@@ -112,17 +112,16 @@
 
 
                     <div class="row justify-content-between" style="margin-top: 15px; ">
-                        <div class="col-lg-5 col-md-7 col-sm-12">
-                            <p class="title-interna">Lorem ipsum dolor sit amet, consectetur elit, expert saas </p>
+                        <div class="col-lg-9 col-md-7 col-sm-12">
+                            <p class="title-interna">Lorem ipsum dolor sit amet, consectetur elit, expert saas Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa rerum minus delectus </p>
                         </div>
                         <div class="col-lg-2 col-md-2 col-sm-6">
                             <p class="card-text"><small class="text-muted"><i class="fa-regular fa-clock i-clock"></i>3
                                     mins
                                     ago</small></p>
                         </div>
-                        <div class="col-lg-2  col-md-2 col-sm-4">
-                            <p class="card-text-l"><small class="text-muted"><i
-                                        class="fa-regular fa-clock i-clock"></i>8,may.</small></p>
+                        <div class="col-lg-2  col-md-2 col-sm-4" style="margin-top: 20px; margin-bottom: 30px;">
+                            <p class="card-text-l"><small class="text-muted">8,may.</small></p>
                         </div>
 
                         <div class="col-12">
@@ -155,7 +154,7 @@
                         </div>
                     </div>
 
-                    <div class="row justify-content-between" style="padding-right:12px; padding-left: 12px; border-top:.7px solid rgba(188, 188, 188, 0.279) ;" ;>
+                    <div class="row justify-content-between" style="padding-right:12px; padding-left: 12px; border-top:.9px solid rgba(188, 188, 188, 0.703) ; " ;>
                         <div class="col-auto ">
                             <p class="title-general">Quizas te interese</p>
                         </div>
@@ -215,28 +214,26 @@
                             </div>
                         </div>
 
-                        <div class="row top">
-                            <div class="col-12">
-                                <p class="title-general">Topics</p>
-                            </div>
-                            <div class="col-auto bt-col">
-                                <a href="http://laweb.com" target="_blank" class="boton-topics">Stablecoin<i
-                                        class="fa-solid fa-check"></i></a>
-                            </div>
-                            <div class="col-auto bt-col">
-                                <a href="http://laweb.com" target="_blank" class="boton-topics">Fintech<i
-                                        class="fa-solid fa-check"></i></a>
-                            </div>
-                            <div class="col-auto bt-col">
-                                <a href="http://laweb.com" target="_blank" class="boton-topics">Tecnología<i
-                                        class="fa-solid fa-check"></i></a>
-                            </div>
-                        </div>
-
 
                     </div>
                 </div>
-
+                <div class="row top" style="border-top:1px solid rgba(188, 188, 188, 0.552); margin-top: 30px;"  >
+                    <div class="col-12">
+                        <p class="title-general">Topics</p>
+                    </div>
+                    <div class="col-auto bt-col">
+                        <a href="http://laweb.com" target="_blank" class="boton-topics">Stablecoin<i
+                                class="fa-solid fa-check"></i></a>
+                    </div>
+                    <div class="col-auto bt-col">
+                        <a href="http://laweb.com" target="_blank" class="boton-topics">Fintech<i
+                                class="fa-solid fa-check"></i></a>
+                    </div>
+                    <div class="col-auto bt-col">
+                        <a href="http://laweb.com" target="_blank" class="boton-topics">Tecnología<i
+                                class="fa-solid fa-check"></i></a>
+                    </div>
+                </div>
         </section>
 
 
