--- a/stprogramado.html
+++ b/stprogramado.html
@@ -47,7 +47,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark " style="border-bottom:.7px solid rgb(188, 188, 188) ;">
             <div class="container" style="padding: 0px 0px 0px 15px;">
                 <a class="navbar-brand" href="index.html">
-                    <img src="assets/img/logotipo/PXOAcademy-logotipo-azul.png" width="130" height="70" alt="">
+                    <img src="assets/img/logotipo/PXOAcademy-logotipo-azul.png" width="115" height="70" alt="">
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -60,7 +60,7 @@
                                     class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="stprogramado.html">StableTalks</a>
+                            <a class="nav-link active" href="stgeneral.html">StableTalks</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="poxopedia.html">PXOPedia</a>
@@ -108,10 +108,10 @@
                         <div class="col-12">
                             <div class="row justify-content-between" style="display: flex;
                             align-items: flex-end;
-                            margin-bottom: 20px;  border-bottom:.7px solid rgb(188, 188, 188) ;">
-                                <div class="col-md-3 col-sm-12 col-lg-2 text-center " style="margin-bottom: 20px;">
+                            margin-bottom: 45px;  border-bottom:.7px solid rgb(188, 188, 188) ;">
+                                <div class="col-md-3 col-sm-12 col-lg-2 text-center " style="margin-bottom: 45px;">
                                     <div class="boton-2" onclick="location.href='index.html';" style="cursor: pointer;">
-                                        <span id="bt-s">Ir a StableStack</span>
+                                        <span id="bt-s">Ir a StableTalks</span>
                                     </div>
                                 </div>
                                 <div class="col-md-6 col-sm-12">
@@ -156,12 +156,12 @@
                                                             </a>
                                                             <a class="fb-ic">
                                                                 <i
-                                                                    class="fab fa-facebook-f fa-lg white-text mr-md-3 mr-3 fa-2x ico-host">
-                                                                </i>
+                                                                class="fab fa-twitter fa-lg white-text mr-md-3 mr-3 fa-2x ico-host">
+                                                            </i>
                                                             </a>
                                                             <a class="fb-ic">
                                                                 <i
-                                                                    class="fab fa-facebook-f fa-lg white-text mr-md-3 mr-3 fa-2x ico-host">
+                                                                    class="fab fa-instagram fa-lg white-text mr-md-3 mr-3 fa-2x ico-host">
                                                                 </i>
                                                             </a>
                                                         </div>
@@ -194,12 +194,12 @@
                                                             </a>
                                                             <a class="fb-ic">
                                                                 <i
-                                                                    class="fab fa-facebook-f fa-lg white-text mr-md-3 mr-3 fa-2x ico-host">
+                                                                    class="fab fa-twitter fa-lg white-text mr-md-3 mr-3 fa-2x ico-host">
                                                                 </i>
                                                             </a>
                                                             <a class="fb-ic">
                                                                 <i
-                                                                    class="fab fa-facebook-f fa-lg white-text mr-md-3 mr-3 fa-2x ico-host">
+                                                                    class="fab fa-instagram fa-lg white-text mr-md-3 mr-3 fa-2x ico-host">
                                                                 </i>
                                                             </a>
                                                         </div>
