--- a/articulos.html
+++ b/articulos.html
@@ -47,7 +47,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark " style="border-bottom:.2px solid rgba(188, 188, 188, 0.279) ;">
             <div class="container" style="padding: 0px 0px 0px 15px;">
                 <a class="navbar-brand" href="index.html">
-                    <img src="assets/img/logotipo/PXOAcademy-logotipo-azul.png" width="130" height="70" alt="">
+                    <img src="assets/img/logotipo/PXOAcademy-logotipo-azul.png" width="115" height="70" alt="">
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -60,7 +60,7 @@
                                     class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="stprogramadov2.html">StableTalks</a>
+                            <a class="nav-link active" href="stgeneral.html">StableTalks</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="poxopedia.html">PXOPedia</a>
