--- a/contacto.html
+++ b/contacto.html
@@ -44,7 +44,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark " style="border-bottom:.2px solid rgba(188, 188, 188, 0.279) ;">
         <div class="container" style="padding: 0px 0px 0px 15px;">
             <a class="navbar-brand" href="index.html">
-                <img src="assets/img/logotipo/PXOAcademy-logotipo-azul.png" width="130" height="70" alt="">
+                <img src="assets/img/logotipo/PXOAcademy-logotipo-azul.png" width="115" height="70" alt="">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -128,30 +128,15 @@
                                 <div class="col-lg-12 col-md-12 col-sm-12">
                                     <div class="text-center cont-ico">
                                         <!-- Facebook -->
-                                       
-                                        <a class="fb-ic">
-                                            <i class="fab fa-facebook-f fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
-                                        </a>
-                                        <!-- Twitter -->
-                                        <a class="tw-ic">
-                                            <i class="fab fa-twitter fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
-                                        </a>
-                                        <!-- Google +-->
-                                        <a class="gplus-ic">
-                                            <i class="fab fa-google-plus-g fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
-                                        </a>
-                                        <!--Linkedin -->
-                                        <a class="li-ic">
-                                            <i class="fab fa-linkedin-in fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
-                                        </a>
-                                        <!--Instagram-->
-                                        <a class="ins-ic">
-                                            <i class="fab fa-instagram fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
-                                        </a>
-                                        <!--Pinterest-->
-                                        <a class="pin-ic">
-                                            <i class="fab fa-pinterest fa-lg white-text fa-2x"> </i>
-                                        </a>
+                                        <span id="dt-s" >Siguenos en:</span>
+                                        <img src="assets/img/contacto/medium.png" alt="" srcset="" style="margin-right: 10px;">
+                                        <img src="assets/img/contacto/Facebook.png" alt="" srcset="" style="margin-right: 10px;">
+                                        <img src="assets/img/contacto/Instagram.png" alt="" srcset="" style="margin-right: 10px;">
+                                        <img src="assets/img/contacto/YouTube.png" alt="" srcset=""style="margin-right: 10px;">
+                                        <img src="assets/img/contacto/LinkedIn.png" alt="" srcset=""style="margin-right: 10px;">
+                                        <img src="assets/img/contacto/Telegram.png" alt="" srcset=""style="margin-right: 10px;">
+
+                                        
                                     </div>
                                 </div>
                             </div>
