--- a/contacto.html
+++ b/contacto.html
@@ -126,17 +126,13 @@
                         <div class="contact">
                             <div class="row align-content-around ">
                                 <div class="col-lg-12 col-md-12 col-sm-12">
-                                    <div class="text-center cont-ico">
-                                        <!-- Facebook -->
-                                        <span id="dt-s" >Siguenos en:</span>
-                                        <img src="assets/img/contacto/medium.png" alt="" srcset="" style="margin-right: 10px;">
-                                        <img src="assets/img/contacto/Facebook.png" alt="" srcset="" style="margin-right: 10px;">
-                                        <img src="assets/img/contacto/Instagram.png" alt="" srcset="" style="margin-right: 10px;">
-                                        <img src="assets/img/contacto/YouTube.png" alt="" srcset=""style="margin-right: 10px;">
-                                        <img src="assets/img/contacto/LinkedIn.png" alt="" srcset=""style="margin-right: 10px;">
-                                        <img src="assets/img/contacto/Telegram.png" alt="" srcset=""style="margin-right: 10px;">
-
-                                        
+                                    <div class="text-center">
+                                        <img src="assets/img/contacto/medium.png" alt="" srcset="" style="margin-right: 10px; width: 30px;">
+                                        <img src="assets/img/contacto/Facebook.png" alt="" srcset="" style="margin-right: 10px;width: 30px;">
+                                        <img src="assets/img/contacto/Instagram.png" alt="" srcset="" style="margin-right: 10px;width: 30px;">
+                                        <img src="assets/img/contacto/YouTube.png" alt="" srcset=""style="margin-right: 10px;width: 30px;">
+                                        <img src="assets/img/contacto/LinkedIn.png" alt="" srcset=""style="margin-right: 10px;width: 30px;">
+                                        <img src="assets/img/contacto/Telegram.png" alt="" srcset=""style="margin-right: 10px;width: 30px;">
                                     </div>
                                 </div>
                             </div>
