--- a/articulos-interior.html
+++ b/articulos-interior.html
@@ -56,11 +56,11 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link " href="articulos.html">Articulos <span
+                            <a class="nav-link active " href="articulos.html">Articulos <span
                                     class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="stgeneral.html">StableTalks</a>
+                            <a class="nav-link " href="stgeneral.html">StableTalks</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="poxopedia.html">PXOPedia</a>
@@ -111,17 +111,17 @@
 
 
 
-                    <div class="row justify-content-between" style="margin-top: 15px; ">
+                    <div class="row justify-content-between" style="margin-top: 40px; margin-bottom: 40px;">
                         <div class="col-lg-9 col-md-7 col-sm-12">
                             <p class="title-interna">Lorem ipsum dolor sit amet, consectetur elit, expert saas Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa rerum minus delectus </p>
                         </div>
                         <div class="col-lg-2 col-md-2 col-sm-6">
-                            <p class="card-text"><small class="text-muted"><i class="fa-regular fa-clock i-clock"></i>3
-                                    mins
-                                    ago</small></p>
+                            <p class="card-text" ><small class="text-muted" style="font-size: 20px;"><i class="fa-regular fa-clock i-clock" style="font-size: 20px;"></i><span>3
+                                mins
+                                ago</span></small></p>
                         </div>
                         <div class="col-lg-2  col-md-2 col-sm-4" style="margin-top: 20px; margin-bottom: 30px;">
-                            <p class="card-text-l"><small class="text-muted">8,may.</small></p>
+                            <p class="card-text-l"><small class="text-muted" style="font-size: 20px;">8,may.</small></p>
                         </div>
 
                         <div class="col-12">
@@ -154,9 +154,9 @@
                         </div>
                     </div>
 
-                    <div class="row justify-content-between" style="padding-right:12px; padding-left: 12px; border-top:.9px solid rgba(188, 188, 188, 0.703) ; " ;>
+                    <div class="row justify-content-between" style="padding-right:12px; margin-top: 50px; padding-left: 12px; border-top:.9px solid rgba(188, 188, 188, 0.703) ; " ;>
                         <div class="col-auto ">
-                            <p class="title-general">Quizas te interese</p>
+                            <p class="title-general">Quizás te interese</p>
                         </div>
 
 
@@ -217,7 +217,7 @@
 
                     </div>
                 </div>
-                <div class="row top" style="border-top:1px solid rgba(188, 188, 188, 0.552); margin-top: 30px;"  >
+                <div class="row top" style="border-top:1px solid rgba(188, 188, 188, 0.552); margin-top: 50px; padding-right: 12px;"  >
                     <div class="col-12">
                         <p class="title-general">Topics</p>
                     </div>
@@ -279,31 +279,13 @@ background: linear-gradient(0deg, rgba(14,113,128,1) 0%, rgba(34,41,90,1) 53%, r
                 <div class="row ">
                     <div class="col-lg-12 col-md-12 col-sm-12">
                         <div class="text-center">
-
-                            <!-- Facebook -->
-                            <a class="fb-ic">
-                                <i class="fab fa-facebook-f fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
-                            </a>
-                            <!-- Twitter -->
-                            <a class="tw-ic">
-                                <i class="fab fa-twitter fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
-                            </a>
-                            <!-- Google +-->
-                            <a class="gplus-ic">
-                                <i class="fab fa-google-plus-g fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
-                            </a>
-                            <!--Linkedin -->
-                            <a class="li-ic">
-                                <i class="fab fa-linkedin-in fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
-                            </a>
-                            <!--Instagram-->
-                            <a class="ins-ic">
-                                <i class="fab fa-instagram fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
-                            </a>
-                            <!--Pinterest-->
-                            <a class="pin-ic">
-                                <i class="fab fa-pinterest fa-lg white-text fa-2x"> </i>
-                            </a>
+                            <img src="assets/img/contacto/medium.png" alt="" srcset="" style="margin-right: 10px; width: 30px;">
+                            <img src="assets/img/contacto/Facebook.png" alt="" srcset="" style="margin-right: 10px;width: 30px;">
+                            <img src="assets/img/contacto/Instagram.png" alt="" srcset="" style="margin-right: 10px;width: 30px;">
+                            <img src="assets/img/contacto/YouTube.png" alt="" srcset=""style="margin-right: 10px;width: 30px;">
+                            <img src="assets/img/contacto/LinkedIn.png" alt="" srcset=""style="margin-right: 10px;width: 30px;">
+                            <img src="assets/img/contacto/Telegram.png" alt="" srcset=""style="margin-right: 10px;width: 30px;">
+                        </div>
                         </div>
                     </div>
                 </div>
