--- a/poxopedia.html
+++ b/poxopedia.html
@@ -266,31 +266,12 @@ background: linear-gradient(0deg, rgba(14,113,128,1) 0%, rgba(34,41,90,1) 53%, r
                 <div class="row ">
                     <div class="col-lg-12 col-md-12 col-sm-12">
                         <div class="text-center">
-
-                            <!-- Facebook -->
-                            <a class="fb-ic">
-                                <i class="fab fa-facebook-f fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
-                            </a>
-                            <!-- Twitter -->
-                            <a class="tw-ic">
-                                <i class="fab fa-twitter fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
-                            </a>
-                            <!-- Google +-->
-                            <a class="gplus-ic">
-                                <i class="fab fa-google-plus-g fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
-                            </a>
-                            <!--Linkedin -->
-                            <a class="li-ic">
-                                <i class="fab fa-linkedin-in fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
-                            </a>
-                            <!--Instagram-->
-                            <a class="ins-ic">
-                                <i class="fab fa-instagram fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
-                            </a>
-                            <!--Pinterest-->
-                            <a class="pin-ic">
-                                <i class="fab fa-pinterest fa-lg white-text fa-2x"> </i>
-                            </a>
+                            <img src="assets/img/contacto/medium.png" alt="" srcset="" style="margin-right: 10px; width: 30px;">
+                            <img src="assets/img/contacto/Facebook.png" alt="" srcset="" style="margin-right: 10px;width: 30px;">
+                            <img src="assets/img/contacto/Instagram.png" alt="" srcset="" style="margin-right: 10px;width: 30px;">
+                            <img src="assets/img/contacto/YouTube.png" alt="" srcset=""style="margin-right: 10px;width: 30px;">
+                            <img src="assets/img/contacto/LinkedIn.png" alt="" srcset=""style="margin-right: 10px;width: 30px;">
+                            <img src="assets/img/contacto/Telegram.png" alt="" srcset=""style="margin-right: 10px;width: 30px;">
                         </div>
                     </div>
                 </div>
