--- a/stgeneral.html
+++ b/stgeneral.html
@@ -143,7 +143,7 @@
                                         <p class="text-card-2">This is a wider card with supporting text below as a natural lead-in
                                             to
                                             additional content. This content is a little bit longer.</p>
-                                            <p class="s">Ir al <a href="" class="txt-stb">StableTalks   <i class="fa-solid fa-arrow-right arr-tsk"></i></a> </p>
+                                            <p class="s">Ir al <a href="" class="txt-stb">StableTalk   <i class="fa-solid fa-arrow-right arr-tsk"></i></a> </p>
                                     </div>
                                 </div>
                             </a>
@@ -163,7 +163,7 @@
                                         <p class="text-card-2">This is a wider card with supporting text below as a natural lead-in
                                             to
                                             additional content. This content is a little bit longer.</p>
-                                            <p class="s">Ir al <a href="" class="txt-stb">StableTalks   <i class="fa-solid fa-arrow-right arr-tsk"></i></a> </p>
+                                            <p class="s">Ir al <a href="" class="txt-stb">StableTalk  <i class="fa-solid fa-arrow-right arr-tsk"></i></a> </p>
                                     </div>
                                 </div>
                             </a>
@@ -183,7 +183,7 @@
                                         <p class="text-card-2">This is a wider card with supporting text below as a natural lead-in
                                             to
                                             additional content. This content is a little bit longer.</p>
-                                            <p class="s">Ir al <a href="" class="txt-stb">StableTalks   <i class="fa-solid fa-arrow-right arr-tsk"></i></a> </p>
+                                            <p class="s">Ir al <a href="" class="txt-stb">StableTalk   <i class="fa-solid fa-arrow-right arr-tsk"></i></a> </p>
                                     </div>
                                 </div>
                             </a>
@@ -202,7 +202,7 @@
                                         <p class="text-card-2">This is a wider card with supporting text below as a natural lead-in
                                             to
                                             additional content. This content is a little bit longer.</p>
-                                            <p class="s">Ir al <a href="" class="txt-stb">StableTalks   <i class="fa-solid fa-arrow-right arr-tsk"></i></a> </p>
+                                            <p class="s">Ir al <a href="" class="txt-stb">StableTalk  <i class="fa-solid fa-arrow-right arr-tsk"></i></a> </p>
                                     </div>
                                 </div>
                             </a>
@@ -223,7 +223,7 @@
                                         <p class="text-card-2">This is a wider card with supporting text below as a natural lead-in
                                             to
                                             additional content. This content is a little bit longer.</p>
-                                            <p class="s">Ir al <a href="" class="txt-stb">StableTalks   <i class="fa-solid fa-arrow-right arr-tsk"></i></a> </p>
+                                            <p class="s">Ir al <a href="" class="txt-stb">StableTalk  <i class="fa-solid fa-arrow-right arr-tsk"></i></a> </p>
                                     </div>
                                 </div>
                             </a>
@@ -243,7 +243,7 @@
                                         <p class="text-card-2">This is a wider card with supporting text below as a natural lead-in
                                             to
                                             additional content. This content is a little bit longer.</p>
-                                            <p class="s">Ir al <a href="" class="txt-stb">StableTalks   <i class="fa-solid fa-arrow-right arr-tsk"></i></a> </p>
+                                            <p class="s">Ir al <a href="" class="txt-stb">StableTalk  <i class="fa-solid fa-arrow-right arr-tsk"></i></a> </p>
                                     </div>
                                 </div>
                             </a>
@@ -256,7 +256,7 @@
                 <div class="row center">
                     <div class="col-lg-4 col-md-4 col-sm-12">
                         <div class="dropdown">
-                            <button class="btn boton-mostrar dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <button class="boton-mostrar dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 <span>Mostrar </span>9
                             </button>
                             <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
@@ -285,7 +285,7 @@
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-4 col-sm-12">
-                        <button type="button" class="btn boton-ir">Ir a la página</button>
+                        <button type="button" class="boton-ir">Ir a la página</button>
             
                     </div>
                 </div>
@@ -313,31 +313,12 @@ background: linear-gradient(0deg, rgba(14,113,128,1) 0%, rgba(34,41,90,1) 53%, r
                 <div class="row ">
                     <div class="col-lg-12 col-md-12 col-sm-12">
                         <div class="text-center">
-
-                            <!-- Facebook -->
-                            <a class="fb-ic">
-                                <i class="fab fa-facebook-f fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
-                            </a>
-                            <!-- Twitter -->
-                            <a class="tw-ic">
-                                <i class="fab fa-twitter fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
-                            </a>
-                            <!-- Google +-->
-                            <a class="gplus-ic">
-                                <i class="fab fa-google-plus-g fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
-                            </a>
-                            <!--Linkedin -->
-                            <a class="li-ic">
-                                <i class="fab fa-linkedin-in fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
-                            </a>
-                            <!--Instagram-->
-                            <a class="ins-ic">
-                                <i class="fab fa-instagram fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
-                            </a>
-                            <!--Pinterest-->
-                            <a class="pin-ic">
-                                <i class="fab fa-pinterest fa-lg white-text fa-2x"> </i>
-                            </a>
+                            <img src="assets/img/contacto/medium.png" alt="" srcset="" style="margin-right: 10px; width: 30px;">
+                            <img src="assets/img/contacto/Facebook.png" alt="" srcset="" style="margin-right: 10px;width: 30px;">
+                            <img src="assets/img/contacto/Instagram.png" alt="" srcset="" style="margin-right: 10px;width: 30px;">
+                            <img src="assets/img/contacto/YouTube.png" alt="" srcset=""style="margin-right: 10px;width: 30px;">
+                            <img src="assets/img/contacto/LinkedIn.png" alt="" srcset=""style="margin-right: 10px;width: 30px;">
+                            <img src="assets/img/contacto/Telegram.png" alt="" srcset=""style="margin-right: 10px;width: 30px;">
                         </div>
                     </div>
                 </div>
