--- a/articulos-interior.html
+++ b/articulos-interior.html
@@ -116,12 +116,12 @@
                             <p class="title-interna">Lorem ipsum dolor sit amet, consectetur elit, expert saas Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa rerum minus delectus </p>
                         </div>
                         <div class="col-lg-2 col-md-2 col-sm-6">
-                            <p class="card-text" ><small class="text-muted" style="font-size: 20px;"><i class="fa-regular fa-clock i-clock" style="font-size: 20px;"></i><span>3
+                            <p class="card-text" ><small class="text-muted-2"><i class="fa-regular fa-clock i-clock" ></i><span>3
                                 mins
                                 ago</span></small></p>
                         </div>
                         <div class="col-lg-2  col-md-2 col-sm-4" style="margin-top: 20px; margin-bottom: 30px;">
-                            <p class="card-text-l"><small class="text-muted" style="font-size: 20px;">8,may.</small></p>
+                            <p class="card-text-l"><small class="text-muted-2" >8,may.</small></p>
                         </div>
 
                         <div class="col-12">
@@ -137,30 +137,18 @@
                                 omnis, excepturi ipsam aperiam. Nobis labore ex placeat beatae dolore iure soluta
                                 tempora vitae? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laboriosam ea
                                 temporibus qui! Laudantium ratione ipsa deserunt amet recusandae nostrum voluptatem
-                                exercitationem reiciendis! Laboriosam adipisci consectetur possimus dignissimos harum
-                                fuga odit? Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae assumenda
-                                illum quo voluptatibus, aut vel veniam quidem, aspernatur facilis illo voluptates
-                                beatae. Repellendus ut et asperiores provident tenetur labore repellat. Lorem ipsum
-                                dolor sit amet consectetur adipisicing elit. Nemo, vel. Voluptatibus ducimus odio ipsam
-                                voluptas magni, nobis atque, tempore cupiditate consequatur quaerat eum asperiores,
-                                laudantium libero consectetur iste. Est, aspernatur?</p>
-                            <p class="txt-articulo-interior-description">Lorem ipsum dolor sit amet consectetur
-                                adipisicing elit. Recusandae assumenda illum quo voluptatibus, aut vel veniam quidem,
-                                aspernatur facilis illo voluptates beatae. Repellendus ut et asperiores provident
-                                tenetur labore repellat. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo,
-                                vel. Voluptatibus ducimus odio ipsam voluptas magni, nobis atque, tempore cupiditate
-                                consequatur quaerat eum asperiores, laudantium libero consectetur iste. Est, aspernatur?
                             </p>
+                       
                         </div>
                     </div>
 
-                    <div class="row justify-content-between" style="padding-right:12px; margin-top: 50px; padding-left: 12px; border-top:.9px solid rgba(188, 188, 188, 0.703) ; " ;>
-                        <div class="col-auto ">
+                    <div class="row justify-content-between" style=" margin-top: 50px;  border-top:.9px solid rgba(188, 188, 188, 0.703) ; " ;>
+                        <div class="col-auto text-left ">
                             <p class="title-general">Quizás te interese</p>
                         </div>
 
 
-                        <div class="row crd-art">
+                        <div class="row crd-art" style="padding-left: 20px; padding-right: 20px;">
 
                             <div class="col-xs-8 col-sm-8 col-md-9 col-lg-4">
                                 <a class="card-ref" href="/articulos-interior.html">
@@ -176,9 +164,9 @@
                                                 additional content. This content is a little bit longer.</p>
                                             <div class="container">
                                                 <div class="row justify-content-between">
-                                                    <p class="card-text-l"><small class="text-muted"></i>8, may.</small>
+                                                    <p class="card-text-l"><small class="text-muted-3"></i>8, may.</small>
 
-                                                    <p class="card-text"><small class="text-muted"><i
+                                                    <p class="card-text"><small class="text-muted-3"><i
                                                                 class="fa-regular fa-clock i-clock"></i>3 mins
                                                             ago</small></p>
                                                 </div>
@@ -201,9 +189,9 @@
                                                 additional content. This content is a little bit longer.</p>
                                             <div class="container">
                                                 <div class="row justify-content-between">
-                                                    <p class="card-text-l"><small class="text-muted"></i>8, may.</small>
+                                                    <p class="card-text-l"><small class="text-muted-3"></i>8, may.</small>
                                                     </p>
-                                                    <p class="card-text"><small class="text-muted"><i
+                                                    <p class="card-text"><small class="text-muted-3"><i
                                                                 class="fa-regular fa-clock i-clock"></i>3 mins
                                                             ago</small></p>
                                                 </div>
@@ -217,23 +205,29 @@
 
                     </div>
                 </div>
+               <div class="container-fluid">
                 <div class="row top" style="border-top:1px solid rgba(188, 188, 188, 0.552); margin-top: 50px; padding-right: 12px;"  >
                     <div class="col-12">
                         <p class="title-general">Topics</p>
                     </div>
-                    <div class="col-auto bt-col">
-                        <a href="http://laweb.com" target="_blank" class="boton-topics">Stablecoin<i
-                                class="fa-solid fa-check"></i></a>
-                    </div>
-                    <div class="col-auto bt-col">
-                        <a href="http://laweb.com" target="_blank" class="boton-topics">Fintech<i
-                                class="fa-solid fa-check"></i></a>
-                    </div>
-                    <div class="col-auto bt-col">
-                        <a href="http://laweb.com" target="_blank" class="boton-topics">Tecnología<i
-                                class="fa-solid fa-check"></i></a>
+                    <div class="col-12">
+                        <div class="row">
+                            <div class="col-auto bt-col">
+                                <a href="http://laweb.com" target="_blank" class="boton-topics">Stablecoin<i
+                                        class="fa-solid fa-check"></i></a>
+                            </div>
+                            <div class="col-auto bt-col">
+                                <a href="http://laweb.com" target="_blank" class="boton-topics">Fintech<i
+                                        class="fa-solid fa-check"></i></a>
+                            </div>
+                            <div class="col-auto bt-col">
+                                <a href="http://laweb.com" target="_blank" class="boton-topics">Tecnología<i
+                                        class="fa-solid fa-check"></i></a>
+                            </div>
+                        </div>
                     </div>
                 </div>
+               </div>
         </section>
 
 
