--- a/articulos.html
+++ b/articulos.html
@@ -247,8 +247,8 @@
                                                 additional content. This content is a little bit longer.</p>
                                             <div class="container">
                                                 <div class="row justify-content-between">
-                                                    <p class="card-text-l"><small class="text-muted">8, may.</small></p>
-                                                    <p class="card-text"><small class="text-muted"><i
+                                                    <p class="card-text-l"><small class="text-muted-3">8, may.</small></p>
+                                                    <p class="card-text"><small class="text-muted-3"><i
                                                                 class="fa-regular fa-clock i-clock"></i>3 mins ago</small></p>
                                                 </div>
                                             </div>
@@ -269,8 +269,8 @@
                                                 additional content. This content is a little bit longer.</p>
                                             <div class="container">
                                                 <div class="row justify-content-between">
-                                                    <p class="card-text-l"><small class="text-muted">8, may.</small></p>
-                                                    <p class="card-text"><small class="text-muted"><i
+                                                    <p class="card-text-l"><small class="text-muted-3">8, may.</small></p>
+                                                    <p class="card-text"><small class="text-muted-3"><i
                                                                 class="fa-regular fa-clock i-clock"></i>3 mins ago</small></p>
                                                 </div>
                                             </div>
@@ -291,8 +291,8 @@
                                                 additional content. This content is a little bit longer.</p>
                                             <div class="container">
                                                 <div class="row justify-content-between">
-                                                    <p class="card-text-l"><small class="text-muted">8, may.</small></p>
-                                                    <p class="card-text"><small class="text-muted"><i
+                                                    <p class="card-text-l"><small class="text-muted-3">8, may.</small></p>
+                                                    <p class="card-text"><small class="text-muted-3"><i
                                                                 class="fa-regular fa-clock i-clock"></i>3 mins ago</small></p>
                                                 </div>
                                             </div>
