--- a/index.html
+++ b/index.html
@@ -280,43 +280,78 @@
     </section>
 
 
-    <section class="menciones">
+    
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <section class="comunidad">
         <p class="title-h1">Nos han mencionado en:</p>
-        <div class="container">
-            <div class="row justify-content-center">
-                <div class="col-xs-12 col-sm-12 col-md-10 col-lg-10">
-                    <div class="row row-cols-md-1 row-cols-sm-1">
-                        <div class="col-lg-4 col-md-4 col-sm-6 nombred">
+
+        <div class="container comunidad">
+
+            <div class="row align-self-center align-items-center justify-content-center">
+            
+                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                    <div class="row row-cols-md-3 row-cols-sm-2">
+                        <div class="col-4 nombred">
                             <div class="skill"><img src="assets/img/menciones/cointelgraph.png" class="img-fluid"
-                                    alt="" srcset=""></i></div>
+                                alt="" srcset=""></i></div>
                         </div>
-                        <div class="col-lg-4 col-md-4 col-sm-6 nombred">
+                        <div class="col-4 nombred">
                             <div class="skill"><img src="assets/img/menciones/eleconomista.png" class="img-fluid"
-                                    alt="" srcset=""></i></div>
+                                alt="" srcset=""></i></div>
                         </div>
-                        <div class="col-lg-4 col-md-4 col-sm-6 nombred">
+                        <div class="col-4 nombred">
                             <div class="skill"><img src="assets/img/menciones/techla.png" class="img-fluid" alt=""
-                                    srcset=""></i></div>
+                                srcset=""></i></div>
                         </div>
-                        <div class="col-lg-4 col-md-4 col-sm-6 nombred">
+                        <div class="col-4 nombred">
                             <div class="skill"><img src="assets/img/menciones/diafintech.png" class="img-fluid" alt=""
-                                    srcset=""></i></div>
+                                srcset=""></i></div>
 
                         </div>
-                        <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6 nombred">
+                        <div class="col-4 nombred">
                             <div class="skill"><img src="assets/img/menciones/elceo.png" class="img-fluid" alt=""
-                                    srcset=""></i></div>
-
+                                srcset=""></i></div>
                         </div>
-                        <div class="col-lg-4 col-md-4 col-sm-6 nombred">
+                        <div class="col-4 nombred">
                             <div class="skill"><img src="assets/img/menciones/decrypt.png" class="img-fluid" alt=""
-                                    srcset=""></i></div>
+                                srcset=""></i></div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 </body>
 
 
