--- a/stgeneral.html
+++ b/stgeneral.html
@@ -129,7 +129,7 @@
         
             <section id="stabletalks">
                 <div class="container-fluid container-stable">
-                    <div class="row cards-stabletalks">
+                    <div class="row cards-stabletalks" style="padding-left: 20px; padding-right: 20px;">
                         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-4">
                             <a class="card-ref" href="stprogramado.html">
                                 <div class="card mb-3">
@@ -137,7 +137,7 @@
                                     <div class="card-body">
                                         <div class="content-card">
                                             <h5 class="card-title">Card title</h5>
-                                            <p class="card-text"><small class="text-muted"><i
+                                            <p class="card-text"><small class="text-muted-3"><i
                                                         class="fa-regular fa-clock i-clock"></i>3 mins ago</small></p>
                                         </div>
                                         <p class="text-card-2">This is a wider card with supporting text below as a natural lead-in
@@ -157,7 +157,7 @@
                                     <div class="card-body">
                                         <div class="content-card">
                                             <h5 class="card-title">Card title</h5>
-                                            <p class="card-text"><small class="text-muted"><i
+                                            <p class="card-text"><small class="text-muted-3"><i
                                                         class="fa-regular fa-clock i-clock"></i>3 mins ago</small></p>
                                         </div>
                                         <p class="text-card-2">This is a wider card with supporting text below as a natural lead-in
@@ -177,7 +177,7 @@
                                     <div class="card-body">
                                         <div class="content-card">
                                             <h5 class="card-title">Card title</h5>
-                                            <p class="card-text"><small class="text-muted"><i
+                                            <p class="card-text"><small class="text-muted-3"><i
                                                         class="fa-regular fa-clock i-clock"></i>3 mins ago</small></p>
                                         </div>
                                         <p class="text-card-2">This is a wider card with supporting text below as a natural lead-in
@@ -196,7 +196,7 @@
                                     <div class="card-body">
                                         <div class="content-card">
                                             <h5 class="card-title">Card title</h5>
-                                            <p class="card-text"><small class="text-muted"><i
+                                            <p class="card-text"><small class="text-muted-3"><i
                                                         class="fa-regular fa-clock i-clock"></i>3 mins ago</small></p>
                                         </div>
                                         <p class="text-card-2">This is a wider card with supporting text below as a natural lead-in
@@ -217,7 +217,7 @@
                                     <div class="card-body">
                                         <div class="content-card">
                                             <h5 class="card-title">Card title</h5>
-                                            <p class="card-text"><small class="text-muted"><i
+                                            <p class="card-text"><small class="text-muted-3"><i
                                                         class="fa-regular fa-clock i-clock"></i>3 mins ago</small></p>
                                         </div>
                                         <p class="text-card-2">This is a wider card with supporting text below as a natural lead-in
@@ -237,7 +237,7 @@
                                     <div class="card-body">
                                         <div class="content-card">
                                             <h5 class="card-title">Card title</h5>
-                                            <p class="card-text"><small class="text-muted"><i
+                                            <p class="card-text"><small class="text-muted-3"><i
                                                         class="fa-regular fa-clock i-clock"></i>3 mins ago</small></p>
                                         </div>
                                         <p class="text-card-2">This is a wider card with supporting text below as a natural lead-in
